replaced multi-value relations into private fields with public getter and relational setter Adjusted tests